--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -14,7 +14,7 @@
             <li><a href="#about">About Me</a></li>
         </ul>
         <div class="logo">
-            <img src="picture/logo3.png" alt="Crafted with Love Logo" style="height: 60px;">
+            <img src="../picture/logo3.png" alt="Crafted with Love Logo" style="height: 60px;">
         </div>
         <ul class="nav-links">
             <li><a href="#shop">Shop</a></li>
