--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="footer.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crafted with Love</title>
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
-   <footer>
-    <div id='nameandsurnase'>
-       <p>Zejneb Semic</p>
-    </div>
-    <div id='email'></div>
-       <p><a href="zejneb.semic@stu.ibu.edu.ba">zejneb.semic@stu.ibu.edu.ba</a></p>
-    </div>
-    <div id="department">
-       <p style="font-weight: bold;">IT Department</p>
-    </div>
-    <div id='course'>
-        <p style="font-weight: bolder;">Foundations of Web Development</p>
-    </div>
-    <div id="copyright">
-       <p class="copyrightText">©2024 Copyright: zejneb.semic</p>
-    </div>
-   </footer>
-
+    <footer>
+        <div id="footer">
+            <p>Zejneb Semic</p>
+        </div>
+        <div id="footer">
+            <p><a href="mailto:zejneb.semic@stu.ibu.edu.ba">zejneb.semic@stu.ibu.edu.ba</a></p>
+        </div>
+        <div id="footer">
+            <p class="department" style="font-weight: bolder;">IT Department</p>
+        </div>
+        <div class="course">
+            <p class="course" style="font-weight: bolder;">Foundations of Web Development</p>
+        </div>
+        <div class="copyright">
+            <p class="copyrightText">©2024 Copyright: Zejneb Semic</p>
+        </div>
+    </footer>
 </body>
 </html>
