--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -22,26 +22,33 @@
             <li><a href="#login">Log In</a></li>
         </ul>
     </nav>
+    <div class="maincontainer">
+        <div class="image-container">
+          <img src="../picture/firstphoto.webp" alt="Fist image">
+          <p>For those who belive in the beauty of the handmade and the magic of the personal touch</p>
+        </div>
+      </div>
+    
 
-    <section id="home">
-        <h1>Welcome to Crafted with Love</h1>
-        <p>Your one-stop shop for DIY fashion and decor projects.</p>
-    </section>
+
+
+
+
 
     <footer>
-        <div id="nameandsurname">
+        <div id="footer">
             <p>Zejneb Semic</p>
         </div>
-        <div id="email">
+        <div id="footer">
             <p><a href="mailto:zejneb.semic@stu.ibu.edu.ba">zejneb.semic@stu.ibu.edu.ba</a></p>
         </div>
-        <div id="department">
-            <p style="font-weight: bold;">IT Department</p>
+        <div id="footer">
+            <p class="department" style="font-weight: bolder;">IT Department</p>
         </div>
-        <div id="course">
-            <p style="font-weight: bolder;">Foundations of Web Development</p>
+        <div class="course">
+            <p class="course" style="font-weight: bolder;">Foundations of Web Development</p>
         </div>
-        <div id="copyright">
+        <div class="copyright">
             <p class="copyrightText">©2024 Copyright: Zejneb Semic</p>
         </div>
     </footer>
