--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="/css/index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -14,10 +14,10 @@
 <body>
 
     <div class="navbar">
-        <a class="active" href="homepage.html"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
-        <a href="aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
-        <a href="loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
+        <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+        <a href="/pages/tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
+        <a href="/pages/aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
+        <a href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
         <a href="#contactModal" class="open-modal-button">Contact Us</a>
     </div>
     
@@ -25,7 +25,7 @@
     <div class="container maincontainer">
         <div class="row my-4">
             <div class="col-12 image-container">
-                <img src="../pictures/firstpic.jpeg" alt="First image" class="img-fluid">
+                <img src="/img/firstpic.jpeg" alt="First image" class="img-fluid">
             </div>
         </div>
         <div class="row">
@@ -41,8 +41,8 @@
                 <p class="parg2">We're here to support your enthusiasm at every stage, from practical courses that make difficult subjects easier to understand to a well-curated store full of goods that enhance your trip. So explore around, find what inspires you, and let's start this creative adventure together. </p>
             </div>
             <div class="col-md-6 rightside">
-                <a href="aboutmePage.html" class="browsebutton">About us</a>
-                <a href="tutorials.html" class="browsebutton">Tutorials</a>
+                <a href="/pages/aboutmePage.html" class="browsebutton">About us</a>
+                <a href="/pages/tutorials.html" class="browsebutton">Tutorials</a>
             </div>
         </div>
         <div id="naslov">
