--- a/pages/aboutmePage.html
+++ b/pages/aboutmePage.html
@@ -15,34 +15,34 @@
 </head>
 <body>
   <div class="navbar">
-    <a class="active" href="homepage.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
-    <a href="aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
-    <a href="loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
+    <a href="/pages/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="/pages/tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
+    <a class="active"  href="/pages/aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
+    <a href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
     <a href="#contactModal" class="open-modal-button">Contact Us</a>
   </div>
 
-    <div id="contactModal" class="modal">
-        <div class="modal-content">
-            <a href="#" class="close">&times;</a>
-            <h5 class="modal-title">Contact Us</h5>
-            <form>
-                <div class="form-group">
-                    <label for="contactName">Name</label>
-                    <input type="text" id="contactName" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <label for="contactEmail">Email address</label>
-                    <input type="email" id="contactEmail" placeholder="Your Email" required>
-                </div>
-                <div class="form-group">
-                    <label for="contactMessage">Message</label>
-                    <textarea id="contactMessage" rows="3" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="submit-button">Send Message</button>
-            </form>
-        </div>
+  <div id="contactModal" class="modal">
+    <div class="modal-content">
+        <a href="#" class="close">&times;</a>
+        <h5 class="modal-title">Contact Us</h5>
+        <form>
+            <div class="form-group">
+                <label for="contactName">Name</label>
+                <input type="text" id="contactName" placeholder="Your Name" required>
+            </div>
+            <div class="form-group">
+                <label for="contactEmail">Email address</label>
+                <input type="email" id="contactEmail" placeholder="Your Email" required>
+            </div>
+            <div class="form-group">
+                <label for="contactMessage">Message</label>
+                <textarea id="contactMessage" rows="3" placeholder="Your Message" required></textarea>
+            </div>
+            <button type="submit" class="submit-button">Send Message</button>
+        </form>
     </div>
+</div>
     
     <div class="aboutsection">
       <h1>Get To Know Us</h1>
@@ -54,7 +54,7 @@
           <div class="flip-card">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <img src="../pictures/avatar.avif" alt="Zejneb Semic" style="width:100%; height:100%;">
+                      <img src="/img/avatar.avif" alt="Zejneb Semic" style="width:100%; height:100%;">
                   </div>
                   <div class="flip-card-back">
                       <h2>Zejneb Semic</h2>
@@ -70,7 +70,7 @@
           <div class="flip-card">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <img src="../pictures/avatar4.avif" alt="Vildana Delibasic" style="width:100%; height:100%;">
+                      <img src="/img/avatar4.avif" alt="Vildana Delibasic" style="width:100%; height:100%;">
                   </div>
                   <div class="flip-card-back">
                       <h2>Vildana Delibasic</h2>
@@ -86,7 +86,7 @@
           <div class="flip-card">
               <div class="flip-card-inner">
                   <div class="flip-card-front">
-                      <img src="../pictures/avatar3.avif" alt="Professor Amela Vatres" style="width:100%; height:100%;">
+                      <img src="/img/avatar3.avif" alt="Professor Amela Vatres" style="width:100%; height:100%;">
                   </div>
                   <div class="flip-card-back">
                       <h2>Professor Amela Vatres</h2>
