--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
@@ -72,7 +72,13 @@
             </div>
         </div> 
     </div>
-        
+    <section class="container-fluid my-5" id="location">
+        <h3 style="color: hsl(308, 40%, 68%); font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" class="text-center mb-4">You can join us at this location if you want to attend our workshops</h3>
+        <div class="embed-responsive embed-responsive-16by9 map-container">
+            <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2878.794198363223!2d18.309495076141555!3d43.818628071094714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4758ca0f99d6bf3b%3A0x6f97362d8c61c461!2sInternational%20Burch%20University!5e0!3m2!1sbs!2sba!4v1731662405976!5m2!1sbs!2sba" allowfullscreen loading="lazy"></iframe>
+        </div>
+    </section>
+    
 
 <div id="contactModal" class="modal">
     <div class="modal-content">
@@ -95,6 +101,8 @@
         </form>
     </div>
 </div>
+
+
    
 <footer class="text-center py-4">
     <p>Zejneb Semic</p>
