--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,12 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 
 </head>
 <body>
@@ -87,15 +90,15 @@
         <form>
             <div class="form-group">
                 <label for="contactName">Name</label>
-                <input type="text" id="contactName" placeholder="Your Name" required>
+                <input type="text" id="contactName" placeholder="Your Name">
             </div>
             <div class="form-group">
                 <label for="contactEmail">Email address</label>
-                <input type="email" id="contactEmail" placeholder="Your Email" required>
+                <input type="email" id="contactEmail" placeholder="Your Email">
             </div>
             <div class="form-group">
                 <label for="contactMessage">Message</label>
-                <textarea id="contactMessage" rows="3" placeholder="Your Message" required></textarea>
+                <textarea id="contactMessage" rows="3" placeholder="Your Message"></textarea>
             </div>
             <button type="submit" class="submit-button">Send Message</button>
         </form>
@@ -111,6 +114,45 @@
     <p class="course">Foundations of Web Development</p>
     <h6>©2024 Copyright: Zejneb Semic</h6>
 </footer>
+
+<script>
+    $(document).ready(function () {
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": true,
+            "positionClass": "toast-top-right",
+            "preventDuplicates": true,
+            "showDuration": "500",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+
+        $('form').on('submit', function (e) {
+            e.preventDefault(); 
+
+            const name = $('#contactName').val().trim();
+            const email = $('#contactEmail').val().trim();
+            const message = $('#contactMessage').val().trim();
+
+            if (name && email && message) {
+                toastr.success("Your message has been sent successfully!");
+                $('#contactName').val('');
+                $('#contactEmail').val('');
+                $('#contactMessage').val('');
+            } else {
+                toastr.error("All fields are required. Please complete the form.");
+            }
+        });
+    });
+</script>
+
 
 </body>
 </html>
