--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -6,9 +6,13 @@
     <title>Tutorials Page</title>
     <link rel="stylesheet" href="/css/tutorials.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    
+
     <style>
         .section {
           padding: 60px 20px;
@@ -36,15 +40,15 @@
             <form>
                 <div class="form-group">
                     <label for="contactName">Name</label>
-                    <input type="text" id="contactName" placeholder="Your Name" required>
+                    <input type="text" id="contactName" placeholder="Your Name">
                 </div>
                 <div class="form-group">
                     <label for="contactEmail">Email address</label>
-                    <input type="email" id="contactEmail" placeholder="Your Email" required>
+                    <input type="email" id="contactEmail" placeholder="Your Email">
                 </div>
                 <div class="form-group">
                     <label for="contactMessage">Message</label>
-                    <textarea id="contactMessage" rows="3" placeholder="Your Message" required></textarea>
+                    <textarea id="contactMessage" rows="3" placeholder="Your Message"></textarea>
                 </div>
                 <button type="submit" class="submit-button">Send Message</button>
             </form>
@@ -266,6 +270,45 @@
     window.open(url, '_blank'); 
 }
 
+</script>
+
+
+<script>
+    $(document).ready(function () {
+        toastr.options = {
+            "closeButton": true,
+            "debug": false,
+            "newestOnTop": true,
+            "progressBar": true,
+            "positionClass": "toast-top-right",
+            "preventDuplicates": true,
+            "showDuration": "500",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+
+        $('form').on('submit', function (e) {
+            e.preventDefault(); 
+
+            const name = $('#contactName').val().trim();
+            const email = $('#contactEmail').val().trim();
+            const message = $('#contactMessage').val().trim();
+
+            if (name && email && message) {
+                toastr.success("Your message has been sent successfully!");
+                $('#contactName').val('');
+                $('#contactEmail').val('');
+                $('#contactMessage').val('');
+            } else {
+                toastr.error("All fields are required. Please complete the form.");
+            }
+        });
+    });
 </script>
 </body>
 </html>
