--- a/pages/aboutmePage.html
+++ b/pages/aboutmePage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/aboutmePage.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
@@ -17,10 +18,18 @@
 <body>
   <div class="navbar">
     <a href="/pages/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="/pages/tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
-    <a class="active"  href="/pages/aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
+    <a href="/pages/tutorials.html"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
+    <a class="active"  href="/pages/aboutmePage.html" ><i class="fa fa-fw fa-user"></i> About Us</a>
     <a href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
     <a href="#contactModal" class="open-modal-button">Contact Us</a>
+    <div class="theme-switcher">
+        <label for="theme-selector">Choose Theme:</label>
+        <select id="theme-selector">
+          <option value="default">Default</option>
+          <option value="dark">Dark</option>
+          <option value="light">Light</option>
+        </select>
+      </div>
   </div>
 
   <div id="contactModal" class="modal">
@@ -144,6 +153,25 @@
             });
         });
     </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const themeSelector = document.getElementById('theme-selector');
+            const savedTheme = localStorage.getItem('theme') || 'default';
+
+            document.body.className = `${savedTheme}-theme`;
+            themeSelector.value = savedTheme;
+
+            themeSelector.addEventListener('change', function () {
+                const selectedTheme = themeSelector.value;
+
+                document.body.className = '';
+                document.body.classList.add(`${selectedTheme}-theme`);
+
+                localStorage.setItem('theme', selectedTheme);
+            });
+        });
+        </script>
     
 
 </body>
