--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
@@ -18,10 +19,18 @@
 
     <div class="navbar">
         <a class="active" href="/pages/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="/pages/tutorials.html" target="_blank"><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
-        <a href="/pages/aboutmePage.html" target="_blank"><i class="fa fa-fw fa-user"></i> About Us</a>
+        <a href="/pages/tutorials.html" ><i class="fa fa-fw fa-lightbulb-o"></i> Tutorials</a>
+        <a href="/pages/aboutmePage.html"><i class="fa fa-fw fa-user"></i> About Us</a>
         <a href="/pages/loginPage.html"><i class="fa fa-fw fa-sign-in"></i> Log In</a>
         <a href="#contactModal" class="open-modal-button">Contact Us</a>
+        <div class="theme-switcher">
+            <label for="theme-selector">Choose Theme:</label>
+            <select id="theme-selector">
+              <option value="default">Default</option>
+              <option value="dark">Dark</option>
+              <option value="light">Light</option>
+            </select>
+          </div>
     </div>
     
     
@@ -152,6 +161,24 @@
         });
     });
 </script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const themeSelector = document.getElementById('theme-selector');
+        const savedTheme = localStorage.getItem('theme') || 'default';
+
+        document.body.className = `${savedTheme}-theme`;
+        themeSelector.value = savedTheme;
+
+        themeSelector.addEventListener('change', function () {
+            const selectedTheme = themeSelector.value;
+
+            document.body.className = '';
+            document.body.classList.add(`${selectedTheme}-theme`);
+
+            localStorage.setItem('theme', selectedTheme);
+        });
+    });
+    </script>
 
 
 </body>
