--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -126,7 +126,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/decor1Pic.jpeg" alt="Wall Art" width="350" height="400">
-                    <div class="desc">Here is the step-by-step instructional illustration for painting a DIY flower mural on the wall, guiding you through each stage, from sketching the outline to adding detailed colors and textures.</div>
+                    <div class="desc">Here is the step-by-step instructional illustration for painting a DIY flower mural on the wall.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/decor1Pic.jpeg', 'Wall Art Wonders', 
                         'Sketch your design lightly on the wall using a pencil. Outline large sections first. Use acrylic paint and layer colors to add depth. Let each layer dry before adding details. Finish with a clear sealant for protection.')">
@@ -138,7 +138,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/decor2Pic.jpeg" alt="Homemade Pillows" width="350" height="400">
-                    <div class="desc">Here’s the step-by-step instructional illustration for making homemade pillows, covering each stage from cutting the fabric to stuffing and sewing it closed.</div>
+                    <div class="desc">Here’s the step-by-step instructional illustration for making homemade pillows.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/decor2Pic.jpeg', 'Homemade Pillows', 
                         'Cut two pieces of fabric to your desired size. Place the fabric pieces together, right sides facing inwards. Sew along three edges, turn the pillow inside out, stuff it with filling, and sew the final edge closed.')">
@@ -150,7 +150,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/decor3Pic.jpeg" alt="DIY Ornament" width="350" height="400">
-                    <div class="desc">Here is the step-by-step instructional illustration for creating a DIY ornament for a Christmas tree, showing each stage from preparing materials to adding festive decorations and finishing touches.</div>
+                    <div class="desc">Here is the step-by-step instructional illustration for creating an ornament for a Christmas tree.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/decor3Pic.jpeg', 'DIY Christmas Ornament', 
                         'Gather materials: clear ornaments, paints, glitters, and ribbons. Paint the ornaments using brushes or sponges. Add glitter and allow to dry. Tie a ribbon through the top loop for hanging. Decorate with patterns or stickers for a festive look.')">
@@ -173,7 +173,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/giftsPic1.jpeg" alt="Custom Mugs" width="350" height="400">
-                    <div class="desc">Here are the step-by-step instructional illustrations for hand-painting a mug, from gathering materials to applying the final sealant and curing the design.</div>
+                    <div class="desc">Here are the step-by-step instructional illustrations for hand-painting a mug.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/giftsPic1.jpeg', 'Custom Mugs', 
                         'Gather materials: ceramic mug, paint, brushes, and sealant. Paint your design on the mug, let it dry completely, and apply a sealant. Bake in the oven at 350°F for 30 minutes to set the paint.')">
@@ -185,7 +185,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/giftsPic2.jpeg" alt="DIY Photo Frame" width="350" height="400">
-                    <div class="desc">Here’s the step-by-step instructional illustration for creating a unique DIY photo frame, showing each stage from painting the frame to adding decorative elements and sealing the design.</div>
+                    <div class="desc">Here’s the step-by-step instructional illustration for creating a unique DIY photo frameame.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/giftsPic2.jpeg', 'DIY Photo Frame', 
                         'Paint the wooden photo frame with your favorite colors. Add decorative elements such as beads, buttons, or glitter. Allow everything to dry and seal with a clear varnish.')">
@@ -197,7 +197,7 @@
             <div class="responsive">
                 <div class="gallery">
                     <img src="/img/giftsPic3.jpeg" alt="DIY Jewelry Box" width="350" height="400">
-                    <div class="desc">Here are the step-by-step instructional illustrations for crafting a jewelry box, guiding you through each stage, from preparing materials to adding final decorative touches and creating compartments inside.</div>
+                    <div class="desc">Here are the step-by-step instructional illustrations for crafting a jewelry box.</div>
                     <button class="view-more" 
                         onclick="viewMore('/img/giftsPic3.jpeg', 'DIY Jewelry Box', 
                         'Gather materials: a plain box, decorative paper, paints, and glue. Paint or cover the box with your design, add compartments, and finish with embellishments like beads or stickers.')">
