External API integration

--- a/pages/index.html
+++ b/pages/index.html
@@ -90,6 +90,13 @@
                 <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2878.794198363223!2d18.309495076141555!3d43.818628071094714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4758ca0f99d6bf3b%3A0x6f97362d8c61c461!2sInternational%20Burch%20University!5e0!3m2!1sbs!2sba!4v1731662405976!5m2!1sbs!2sba" allowfullscreen loading="lazy"></iframe>
             </div>
         </section>
+        <div id="weather-info" class="text-center mt-4">
+            <h4>Current Weather in Sarajevo</h4>
+            <p id="weather-description">Fetching weather data...</p>
+            <p id="temperature"></p>
+            <img id="weather-icon" src="" alt="Weather Icon" style="width: 50px; display: none;">
+        </div>
+        
     
 
     <div id="contactModal" class="modal">
@@ -184,9 +191,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
