Added edit and delete options

--- a/pages/aboutmePage.html
+++ b/pages/aboutmePage.html
@@ -133,6 +133,14 @@
         </div>
     </div>
 
+    <div class="voices-of-inspiration-section container mt-5">
+        <h2 class="text-center">Voices of Inspiration</h2>
+        <div class="inspiration-list">
+        </div>
+        <button class="btn btn-primary mt-3" id="add-voice">Add Your Voice</button>
+    </div>
+    
+
     <div class="faq-container">
         <h2>Frequently Asked Questions</h2>
         <div class="accordion">
